# internal/app/mindwell-server/account/account.go
@@ -208,7 +208,7 @@ const authProfileQuery = `
 SELECT users.id, users.name, users.show_name,
 users.avatar,
 gender.type, users.is_daylog,
-user_privacy.type,
+user_privacy.type, user_chat_privacy.type,
 users.title, users.rank, 
 extract(epoch from users.created_at), extract(epoch from users.last_seen_at), is_online(users.last_seen_at),
 user_age(users.birthday),
@@ -229,6 +229,7 @@ invited_by.avatar
 FROM users 
 INNER JOIN gender ON gender.id = users.gender
 INNER JOIN user_privacy ON users.privacy = user_privacy.id
+INNER JOIN user_chat_privacy ON users.chat_privacy = user_chat_privacy.id
 INNER JOIN font_family ON users.font_family = font_family.id
 INNER JOIN alignment ON users.text_alignment = alignment.id
 LEFT JOIN users AS invited_by ON users.invited_by = invited_by.id
@@ -257,7 +258,7 @@ func loadAuthProfile(srv *utils.MindwellServer, tx *utils.AutoTx, query string, 
 	tx.Scan(&profile.ID, &profile.Name, &profile.ShowName,
 		&avatar,
 		&profile.Gender, &profile.IsDaylog,
-		&profile.Privacy,
+		&profile.Privacy, &profile.ChatPrivacy,
 		&profile.Title, &profile.Rank,
 		&profile.CreatedAt, &profile.LastSeenAt, &profile.IsOnline,
 		&age,
